<resources>
    <string name="app_name" translatable="false">OCARIoT DA</string>

    <!-- TITLES -->
    <string name="title_physical_activities">Physical activities</string>
    <string name="title_activities">Activities</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_weight">Weight</string>
    <string name="title_body_fat">Body fat</string>
    <string name="title_iot">IoT</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_settings">Settings</string>
    <string name="title_children">Children</string>
    <string name="title_hours">hours</string>
    <string name="title_minutes">minutes</string>
    <string name="title_sleep_efficiency">Sleep efficiency</string>
    <string name="title_asleep">Asleep</string>
    <string name="title_restless">Restless</string>
    <string name="title_awake">Awake</string>
    <string name="title_rem">REM</string>
    <string name="title_light">Light</string>
    <string name="title_deep">Deep</string>
    <string name="title_error">Error!</string>
    <string name="title_success">Success!</string>
    <string name="title_login_failed">Authentication failed!</string>
    <string name="title_connection_error">Connection error!</string>
    <string name="title_access_blocked">Access blocked!</string>
    <string name="title_last_measurement">Last measurement"</string>
    <string name="title_processing">Processing"</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="img_sort">Sort Icon</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="title_login_in">Login</string>
    <string name="img_desc_ocariot">OCARIoT logo</string>

    <!-- ACTIVITIES -->
    <string name="cals">cals</string>
    <string name="km">km</string>
    <string name="cals_min">cals/min</string>
    <string name="min">min</string>
    <string name="duration_min">%d min</string>
    <string name="calories">Calories</string>
    <string name="steps">Steps</string>
    <string name="levels">Levels</string>
    <string name="level_sedentary">Sedentary: %d min</string>
    <string name="level_lightly">Lightly: %d min</string>
    <string name="level_fairly">Fairly: %d min</string>
    <string name="level_very">Very: %d min</string>
    <string name="img_desc_activity">Activity image</string>
    <string name="img_desc_clock">Clock image</string>
    <string name="img_desc_calories">Calories image</string>
    <string name="hr_avg">Average Heart Rate</string>
    <string name="activity_range_time">%s at %s</string>
    <string name="img_desc_distance">Distance image</string>

    <!-- SLEEP -->
    <string name="times_count">%d times</string>

    <!-- IoT -->
    <string name="weight_average">Average</string>
    <string name="img_desc_heart">Heart image</string>

    <!-- FORMAT DATES -->
    <string name="date_format1">yyyy-MM-dd</string>
    <string name="date_time_abb1">MMMM dd \'at\' HH:mm</string>
    <string name="date_time_abb3">EEEE, MMMM dd, yyyy</string>
    <string name="date_time_abb4">EEE, MMMM dd, yyyy</string>
    <string name="date_time_abb5">EEE, yyyy-MM-dd \'at\' HH:mm:ss</string>
    <string name="hour_format1">HH:mm</string>
    <string name="hour_format2">HH:mm:ss</string>

    <!-- SETTINGS -->
    <string name="key_fitibit" translatable="false">key_fitbit</string>
    <string name="key_signout" translatable="false">key_signout</string>
    <string name="key_sync_data" translatable="false">key_sync_data</string>
    <string name="key_children" translatable="false">key_children_manager</string>
    <string name="settings_summary_version" translatable="false">1.9.0</string>
    <string name="login_with_fitbit">Provide access to Fitbit</string>
    <string name="login_do_not_user_fitbit">Do not currently use Fitbit</string>
    <string name="settings_title">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_external_services">External Services</string>
    <string name="settings_signout">Logout</string>
    <string name="settings_fitbit">Fitbit</string>
    <string name="settings_summary_signout">You will be logged out of the app and redirected to the login screen.</string>
    <string name="settings_summary_fitbit">Share activity, sleep, heart rate, and weight data.</string>
    <string name="settings_version">Version</string>
    <string name="settings_about">About</string>
    <string name="settings_children">Children</string>
    <string name="settings_summary_children">Children list</string>

    <!-- DIALOGS -->
    <string name="dialog_confirm_sign_out">Do you really want to exit the application?\nYou will be redirected to the login screen&#8230;</string>
    <string name="dialog_confirm_revoke_fitbit">Do you want to revoke Fitbit access?\nYou will no longer be able to sync data from child \"%s\".</string>
    <string name="dialog_revoke_fitbit_processing">Processing Fitbit access revocation request&#8230;</string>

    <!-- ERROR MESSAGES -->
    <string name="error_connection">Unable to establish a communication. Make sure you have an internet connection and try again&#8230;</string>
    <string name="error_oauth_fitbit">An internal error occurred on the Fitbit OAuth server.</string>
    <string name="error_configs_fitbit">Unable to retrieve Fitbit information required to perform the operation.\nPlease contact the administrator!</string>
    <string name="error_login_invalid">Invalid username or password&#8230;</string>
    <string name="error_500">An error occurred communicating with the server. Please try again later&#8230;</string>
    <string name="error_403">You do not have permission for the functionality you are trying to access. Please contact the administrator&#8230;</string>
    <string name="error_400">Could not perform operation. Please try again later&#8230;</string>
    <string name="error_400_1">Unable to complete the operation. Try again and be sure to provide access to Activity, Sleep, Heart Rate and Weight data.</string>
    <string name="error_get_resources">An error occurred while trying to recover your data. Please try again later&#8230;</string>

    <!-- MESSAGES -->
    <string name="message_no_data_display">There is no data to display!</string>
    <string name="message_welcome">1. Log in to the selected child\'s Fitbit account;\n\n2. Provide permission for APP OCARIoT to collect Fitbit data on physical activity, sleep, heart rate and weight;\n\n3. Done! Activity, sleep, heart rate, and weight logs will be captured by Fitbit devices and synchronized with the OCARIoT platform automatically or when prompted.</string>
    <string name="message_welcome_child">1. Authenticate to your Fitbit account;\n\n2. Provide permission for APP OCARIoT to collect Fitbit data on physical activity, sleep, heart rate and weight;\n\n3. Done! Activity, sleep, heart rate, and weight logs will be captured by Fitbit devices and synchronized with the OCARIoT platform automatically or when prompted.</string>
    <string name="message_selected_child">Selected child %s"</string>
    <string name="message_about">This project received funding from the European Union\'s Horizon 2020 program under concession agreement Nº 777082 and the Brazilian Ministry of Science, Technology, Innovation and Communication through RNP, agreement No. 3007.</string>
    <string name="message_permission_location">Location permission is required to use Bluetooth Low Energy!</string>

    <!-- VALIDATION MESSAGES -->
    <string name="required_username">Username is required!</string>
    <string name="required_password">Password is required!</string>

    <!-- SYNC DATA -->
    <string name="synchronization">Sync</string>
    <string name="synchronization_data">Synchronize data from external services with the OCARIoT platform.</string>
    <string name="synchronizing">Syncing</string>
    <string name="synchronizing_data_fitbit">Syncing Fitbit data from child \"%s\" with the OCARIoT platform&#8230;</string>
    <string name="sync_data_fitbit_error">An error occurred while trying to sync Fitbit data for child \"%s\" with the OCARIoT platform.\nPlease try again later&#8230;</string>
    <string name="sync_data_fitbit_success">Fitbit data for child \"%s\" was successfully synchronized with the OCARIoT platform.</string>
    <string name="last_sync_date_time">Last sync: %s</string>
    <string name="fitbit_get_access_token_error">An error occurred while trying to retrieve Fitbit access token.\nPlease try later&#8230;</string>

    <!-- ALERTS -->
    <string name="alert_title_token_expired">Authentication problem!"</string>
    <string name="alert_token_expired_ocariot">Your session has exceeded the 24 hour limit.\nIn seconds, you will be redirected to the login screen to reauthenticate.</string>
    <string name="alert_title_no_token_fitbit">An error occurred while trying to regain access to Fitbit!</string>
    <string name="alert_no_token_fitbit">To collect Fitbit data from child \"%s\", you must first provide authorization to collect the data.</string>
    <string name="alert_token_expired_fitbit">Fitbit access token for child \"%s\" has expired or been revoked.\nPlease click here to grant access again&#8230;</string>
    <string name="alert_access_blocked">Sorry, this app does not support admin type user. Only child, family, educator and health professional are allowed&#8230;</string>
    <string name="alert_revoke_fitbit_success">Fitbit access successfully revoked. You will no longer be able to perform data synchronization.</string>
    <string name="alert_enable_bluetooth">If you want your Heart Rate (Polar OH1) data to be automatically displayed on this screen, click here to enable Bluetooth&#8230;</string>

    <!-- MENU -->
    <string name="action_sort_username">Username</string>
    <string name="action_sort_sync">Synchronization</string>
    <string name="action_search" translatable="false">Search</string>
    <string name="brazilian_pilot">Brazilian pilot</string>
    <string name="european_pilot">European pilot</string>
</resources>
