<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="50"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:icon="@drawable/ic_action_sort_dark"
        android:orderInCategory="100"
        android:title="@string/img_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_username"
                android:checkable="true"
                android:checked="false"
                android:title="@string/action_sort_username"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sort_sync"
                android:checkable="true"
                android:checked="false"
                android:title="@string/action_sort_sync" />
        </menu>
    </item>
</menu>