<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/data_swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ui.fragment.IotFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/alert_enable_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWarning"
            android:orientation="vertical"
            android:padding="@dimen/default_padding"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:text="@string/alert_enable_bluetooth"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/alert_enable_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWarning"
            android:orientation="vertical"
            android:padding="@dimen/default_padding"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center"
                android:text="@string/alert_enable_location"
                android:textColor="@android:color/white" />
        </FrameLayout>

        <include
            android:id="@+id/box_no_data"
            layout="@layout/no_data"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/box_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="@dimen/default_padding"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_last_measurement"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weight_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="--"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_weight"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/body_fat_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="--"
                        android:textColor="@color/colorWarning"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_body_fat"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/weight_average"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/weight_month_average_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="--"
                android:textColor="@color/colorPurple"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="42dp">

            <View
                android:id="@+id/line2_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLineDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="Heart Rate"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <ImageView
                android:id="@+id/hr_img"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/img_desc_heart"
                android:src="@drawable/heart"
                android:tint="@color/colorLineDivider" />

            <LinearLayout
                android:id="@+id/box_hr_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ProgressBar
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box_hr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/hr_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="83"
                        android:textSize="30sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-5dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginStart="10dp"
                        android:gravity="left|bottom"
                        android:text="bpm"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
                </RelativeLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/box_hr_summary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:paddingBottom="40dp"
                    android:visibility="gone">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/hr_min_tv"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="0"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/hr_min_tv"
                            android:gravity="center"
                            android:text="min"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/hr_max_tv"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="0"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/hr_max_tv"
                            android:gravity="center"
                            android:text="max"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/hr_avg_tv"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="0"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/hr_avg_tv"
                            android:gravity="center"
                            android:text="avg"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark" />
                    </RelativeLayout>
                </LinearLayout>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/hr_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:padding="0dp" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
